feat(base): vendor-specific application-id support
Strict DRAs and 3GPP nodes reject CERs that advertise vendor-
specific applications (e.g. SGd, appId 16777313) as bare
Auth-Application-Id AVPs instead of the required grouped
Vendor-Specific-Application-Id AVP (RFC 6733 §5.3).

The flat List<Integer> model in Capabilities could not express
this distinction at all; any node targeting a 3GPP interface
would fail capability negotiation against a conformant peer.

Co-authored-by: AI Coding Agent <ai@invalid.invalid>